<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/frameTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:background="@color/bg_user_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_165sdp"
        android:background="@color/bg_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameTop">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvThongBao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_158sdp"
            android:background="@drawable/bg_alert_user"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/alertUser"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/img_user" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNameUser"
            style="@style/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imgUser"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/imgUser"
            android:text="Pham Lam Vu"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSdtUser"
            style="@style/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameUser"
            android:layout_alignStart="@+id/tvNameUser"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="0999999999"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddressUser"
            style="@style/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSdtUser"
            android:layout_alignStart="@+id/tvSdtUser"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Ba Dinh, Ha Noi"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFavourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/favourite"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <!--    <View-->
    <!--        android:id="@+id/view2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:background="@color/black"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnFavourite"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->

    <!--    <View-->
    <!--        android:id="@+id/view3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:background="@color/black"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"-->
    <!--        app:layout_constraintHorizontal_bias="0.038"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnHistory"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->


    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:background="@color/black"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"-->
    <!--        app:layout_constraintHorizontal_bias="0.038"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnSettingAccount"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:background="@color/black"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"-->
    <!--        app:layout_constraintHorizontal_bias="0.038"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnChangePass"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/history"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnFavourite"
        app:layout_constraintStart_toStartOf="@+id/btnFavourite"
        app:layout_constraintTop_toBottomOf="@+id/btnFavourite"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettingAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/settingAccount"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnHistory"
        app:layout_constraintStart_toStartOf="@+id/btnHistory"
        app:layout_constraintTop_toBottomOf="@+id/btnHistory"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/changePass"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnSettingAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnSettingAccount"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/logout"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btnChangePass"
        app:layout_constraintStart_toStartOf="@+id/btnChangePass"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePass"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="2dp"-->
    <!--        android:background="@color/black"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"-->
    <!--        app:layout_constraintHorizontal_bias="0.038"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnLogout"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->


</androidx.constraintlayout.widget.ConstraintLayout>